refactor: paged filter for trainee history summary endpoint
TIS21-7632
TIS21-7645